change is that when a callout appears before a group, the "length of next
pattern item" that is passed now just gives the length of the opening
parenthesis item, not the length of the whole group. A length of zero is now
given only for a callout at the end of the pattern. Automatic callouts are no 
longer inserted before and after explicit callouts in the pattern.

4. Back references are now permitted in lookbehind assertions when there are 
no duplicated group numbers (that is, (?| has not been used), and, if the 
reference is by name, there is only one group of that name. The referenced
group must, of course be of fixed length.

5. pcre2test has been upgraded so that, when run under valgrind with valgrind 
support enabled, reading past the end of the pattern is detected, both when 
compiling and during callout processing.

6. \g{+<number>} (e.g. \g{+2)} ) is now supported. It is a "forward back 
reference" and can be useful in repetitions (compare \g{-<number>}). Perl does 
not recognize this syntax.

7. Automatic callouts are no longer generated before and after callouts in the 
pattern.

8. When pcre2test was outputing information from a callout, the caret indicator
for the current position in the subject line was incorrect if it was after an
escape sequence for a character whose code point was greater than \x{ff}.

9. Change 19 for 10.22 had a typo (PCRE_STATIC_RUNTIME should be
PCRE2_STATIC_RUNTIME). Fix from David Gaussmann.

10. Added --max-buffer-size to pcre2grep, to allow for automatic buffer 
expansion when long lines are encountered. Original patch by Dmitry 
Cherniachenko.

11. If pcre2grep was compiled with JIT support, but the library was compiled 
without it (something that neither ./configure nor CMake allow, but it can be
done by editing config.h), pcre2grep was giving a JIT error. Now it detects
this situation and does not try to use JIT.

12. Added some "const" qualifiers to variables in pcre2grep.
